Added an event in js and changed the cursor style in css

--- a/css/homework2.css
+++ b/css/homework2.css
@@ -12,3 +12,13 @@ p{
     font-weight: 800;
     font-size: 20px;
 }
+
+p#first-paragraph {
+    cursor: pointer;
+}
+p#second-paragraph {
+    cursor: pointer;
+}
+p#third-paragraph {
+    cursor: pointer;
+}
